--- a/index.html
+++ b/index.html
@@ -1,38 +1,88 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Privacy Policy</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f9f9f9;
+            margin: 0;
+            padding: 20px;
+        }
+        .container {
+            max-width: 800px;
+            margin: auto;
+            background: white;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        h1, h2, h3 {
+            color: #333;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
+</head>
+<body>
+    <div class="container">
+        <h1>Privacy Policy</h1>
+        <p><strong>Effective Date:</strong> 09-01-2025</p>
+        <p><strong>Last Updated:</strong> 09-01-2025</p>
 
-Privacy Policy
-Effective Date: 09-01-2025
-Last Updated: 09-01-2025
+        <h2>Introduction</h2>
+        <p>Welcome to Social Content Scheduler. Your privacy is important to us, and we are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information when you use our app.</p>
 
-Introduction
-Welcome to Social Content Scheduler. Your privacy is important to us, and we are committed to protecting the personal information you share with us. This Privacy Policy explains how we collect, use, and safeguard your information when you use our app.
+        <h2>Information We Collect</h2>
+        <p>We may collect the following types of information when you use our app:</p>
+        <ul>
+            <li><strong>Personal Information:</strong> Name, email address, and social media profile information.</li>
+            <li><strong>Usage Data:</strong> Details about how you use the app, including scheduled posts and interaction logs.</li>
+        </ul>
 
-Information We Collect
-We may collect the following types of information when you use our app:
+        <h2>How We Use Your Information</h2>
+        <p>We use your information to:</p>
+        <ul>
+            <li>Provide and improve our services.</li>
+            <li>Schedule and post content on your behalf to social media platforms.</li>
+            <li>Communicate with you about updates, changes, or support.</li>
+        </ul>
 
-Personal Information: Name, email address, and social media profile information.
-Usage Data: Details about how you use the app, including scheduled posts and interaction logs.
-How We Use Your Information
-We use your information to:
+        <h2>Sharing Your Information</h2>
+        <p>We will not share your personal information with third parties except:</p>
+        <ul>
+            <li>To comply with legal obligations.</li>
+            <li>When required to integrate with social media platforms for posting content.</li>
+        </ul>
 
-Provide and improve our services.
-Schedule and post content on your behalf to social media platforms.
-Communicate with you about updates, changes, or support.
-Sharing Your Information
-We will not share your personal information with third parties except:
+        <h2>Security of Your Information</h2>
+        <p>We implement reasonable technical and organizational measures to protect your data from unauthorized access, use, or disclosure.</p>
 
-To comply with legal obligations.
-When required to integrate with social media platforms for posting content.
-Security of Your Information
-We implement reasonable technical and organizational measures to protect your data from unauthorized access, use, or disclosure.
+        <h2>Your Rights</h2>
+        <p>You have the right to:</p>
+        <ul>
+            <li>Access and update your information.</li>
+            <li>Request the deletion of your personal data.</li>
+            <li>Opt-out of communications.</li>
+        </ul>
 
-Your Rights
-You have the right to:
-
-Access and update your information.
-Request the deletion of your personal data.
-Opt-out of communications.
-Contact Us
-If you have any questions about this Privacy Policy, please contact us at:
-
-Email: support@socialcontentscheduler.app
-Website: socialcontentscheduler.app
+        <h2>Contact Us</h2>
+        <p>If you have any questions about this Privacy Policy, please contact us at:</p>
+        <ul>
+            <li><strong>Email:</strong> <a href="mailto:support@socialcontentscheduler.app">support@socialcontentscheduler.app</a></li>
+            <li><strong>Website:</strong> <a href="https://socialcontentscheduler.app">socialcontentscheduler.app</a></li>
+        </ul>
+    </div>
+</body>
+</html>
